@@ -1,3 +1,8 @@
+Wed Sep 21 20:54:37 2016  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: run program from idle to avoid a queued up
+	  program if double hitting run
+
 Wed Sep 21 20:44:39 2016  Jiri (George) Lebl <jirka@5z.com>
 
 	* examples/*.gel: update the complex analysis examples to have
